See if lightbox 100vw is the cause of overflow issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -404,9 +404,9 @@ h3 {
 }
 
 .lightBox {
-  margin: 0 auto 5rem auto;
+  margin: 0 auto 9rem auto;
   position: relative;
-  width: 80vw;
+  width: 100vw;
   max-width: 1000px;
 }
 
